parser/tests/parser/complex/invalid/declaration_recovery_3.mf2
.foo .local $hello = {world}
{{}}
=== spans ===
                    .foo .local $hello = {world}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 0:0-1:4
LocalDeclaration         ^^^^^^^^^^^^^^^^^^^^^^^      0:5-0:28
Variable                        ^^^^^^                0:12-0:18
LiteralExpression                        ^^^^^^^      0:21-0:28
Text                                      ^^^^^       0:22-0:27
QuotedPattern                                    ^^^^ 1:0-1:4
Pattern                                               0:0-0:0
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..5)
  .foo .local $hello = {world}↵{{}}
  ^^^^^
=== ast ===
ComplexMessage {
    span: @0..33,
    declarations: [
        LocalDeclaration {
            start: @5,
            variable: Variable {
                span: @12..18,
                name: "hello",
            },
            expression: LiteralExpression {
                span: @21..28,
                literal: Text {
                    start: @22,
                    content: "world",
                },
                annotation: None,
                attributes: [],
            },
        },
    ],
    body: QuotedPattern {
        span: @29..33,
        pattern: Pattern {
            parts: [],
        },
    },
}